--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "postinstall": "patch-package"
   },
   "private": true,
   "dependencies": {
     "@angular-builders/custom-webpack": "^15.0.0",
-    "@angular/animations": "14.2.12",
+    "@angular/animations": "^14.2.12",
     "@angular/cdk": "^13.3.1",
     "@angular/common": "^14.2.12",
     "@angular/compiler": "^14.2.12",
@@ -21,20 +22,26 @@
     "@angular/elements": "^14.2.12",
     "@angular/forms": "^14.2.12",
     "@angular/localize": "14.2.12",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "^14.2.12",
     "@angular/platform-browser-dynamic": "^14.2.12",
     "@angular/router": "^14.2.12",
     "@auth0/auth0-angular": "^1.11.1",
+    "@danmt/wallet-adapter-angular": "^0.2.12",
     "@heavy-duty/wallet-adapter": "^0.5.0-beta.0",
+    "@jnwng/walletconnect-solana": "^0.1.4",
     "@metaplex-foundation/beet": "^0.7.1",
     "@metaplex-foundation/js": "^0.17.12",
     "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
     "@metaplex/js": "^4.12.0",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@ngrx/component-store": "^15.2.1",
     "@popperjs/core": "^2.11.4",
+    "@shadow-drive/sdk": "^3.1.0",
     "@solana/spl-token": "^0.3.6",
     "@solana/wallet-adapter-wallets": "^0.19.10",
     "@solana/web3.js": "^1.72.0",
+    "@spling/social-protocol": "^1.5.4",
     "angular-dark-mode": "^3.0.3",
     "angular-sol-wallets": "^0.0.22",
     "assert": "^2.0.0",
@@ -42,10 +49,12 @@
     "bootstrap-notify": "^3.1.3",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "buffer-browserify": "^0.2.5",
     "core-js": "^3.27.1",
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "express-openid-connect": "^2.11.0",
+    "graphql": "^16.6.0",
     "jquery": "^3.6.3",
     "jquery.js": "^0.0.2-security",
     "jw-bootstrap-switch-ng2": "2.0.5",
@@ -53,6 +62,7 @@
     "ng2-nouislider": "1.8.3",
     "ngx-highlightjs": "^7.0.1",
     "nouislider": "14.6.3",
+    "patch-package": "^6.5.1",
     "path-browserify": "^1.0.1",
     "rxjs": "^7.5.5",
     "solana-wallets-vue": "^0.5.2",
