--- a/angular.json
+++ b/angular.json
@@ -12,8 +12,11 @@
       "architect": {
         "build": {
           
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+                "path": "./webpack.config.js"
+            },
             "aot": true,
             "outputPath": "dist/argon-design-system-angular",
             "index": "src/index.html",
@@ -89,7 +92,7 @@
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "browserTarget": "argon-design-system-angular:build"
           },
