--- a/package.json
+++ b/package.json
@@ -8,40 +8,39 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "postinstall": "patch-package"
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
   },
   "private": true,
   "dependencies": {
     "@angular-builders/custom-webpack": "^15.0.0",
-    "@angular/animations": "^14.2.12",
-    "@angular/cdk": "^13.3.1",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/elements": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/localize": "14.2.12",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "@auth0/auth0-angular": "^1.11.1",
+    "@angular/animations": "^15.1.4",
+    "@angular/cdk": "^15.1.4",
+    "@angular/common": "^15.1.4",
+    "@angular/compiler": "^15.1.4",
+    "@angular/core": "^15.1.4",
+    "@angular/elements": "^15.1.4",
+    "@angular/forms": "^15.1.4",
+    "@angular/localize": "15.1.4",
+    "@angular/material": "^15.1.4",
+    "@angular/platform-browser": "^15.1.4",
+    "@angular/platform-browser-dynamic": "^15.1.4",
+    "@angular/router": "^15.1.4",
+    "@auth0/auth0-angular": "^2.0.1",
     "@danmt/wallet-adapter-angular": "^0.2.12",
-    "@heavy-duty/wallet-adapter": "^0.5.0-beta.0",
-    "@jnwng/walletconnect-solana": "^0.1.4",
+    "@heavy-duty/wallet-adapter": "^0.6.0-beta.3",
+    "@heavy-duty/wallet-adapter-cdk": "^0.6.0-beta.3",
+    "@heavy-duty/wallet-adapter-material": "^0.6.0-beta.3",
     "@metaplex-foundation/beet": "^0.7.1",
-    "@metaplex-foundation/js": "^0.17.12",
-    "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
+    "@metaplex-foundation/js": "^0.18.0",
+    "@metaplex-foundation/mpl-token-metadata": "^2.8.3",
     "@metaplex/js": "^4.12.0",
-    "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@ng-bootstrap/ng-bootstrap": "14.0.1",
     "@ngrx/component-store": "^15.2.1",
-    "@popperjs/core": "^2.11.4",
-    "@shadow-drive/sdk": "^3.1.0",
-    "@solana/spl-token": "^0.3.6",
-    "@solana/wallet-adapter-wallets": "^0.19.10",
-    "@solana/web3.js": "^1.72.0",
-    "@spling/social-protocol": "^1.5.4",
+    "@popperjs/core": "^2.11.6",
+    "@solana/spl-token": "^0.3.7",
+    "@solana/wallet-adapter-wallets": "^0.19.11",
+    "@solana/web3.js": "^1.73.2",
+    "@walletconnect/types": "^2.4.0",
     "angular-dark-mode": "^3.0.3",
     "angular-sol-wallets": "^0.0.22",
     "assert": "^2.0.0",
@@ -50,46 +49,46 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "buffer-browserify": "^0.2.5",
-    "core-js": "^3.27.1",
+    "core-js": "^3.27.2",
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
-    "express-openid-connect": "^2.11.0",
+    "express-openid-connect": "^2.12.0",
     "graphql": "^16.6.0",
+    "ipfs-core": "^0.18.0",
+    "ipfs-http-client": "^60.0.0",
     "jquery": "^3.6.3",
     "jquery.js": "^0.0.2-security",
     "jw-bootstrap-switch-ng2": "2.0.5",
-    "moment": "^2.29.1",
+    "moment": "^2.29.4",
     "ng2-nouislider": "1.8.3",
-    "ngx-highlightjs": "^7.0.1",
-    "nouislider": "14.6.3",
-    "patch-package": "^6.5.1",
+    "ngx-highlightjs": "^8.0.0",
+    "nouislider": "15.7.0",
     "path-browserify": "^1.0.1",
-    "rxjs": "^7.5.5",
-    "solana-wallets-vue": "^0.5.2",
+    "rxjs": "^7.8.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "zone.js": "~0.11.5"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@angular/language-service": "14.2.12",
-    "@types/jasmine": "~3.10.3",
+    "@angular-devkit/build-angular": "^15.1.5",
+    "@angular/cli": "^15.1.5",
+    "@angular/compiler-cli": "^15.1.4",
+    "@angular/language-service": "15.1.4",
+    "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "16.3.2",
+    "@types/node": "18.13.0",
     "codelyzer": "6.0.2",
-    "jasmine-core": "~4.0.1",
+    "jasmine-core": "~4.5.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.3.17",
+    "karma": "^6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "7.0.0",
-    "ts-node": "~10.7.0",
+    "ts-node": "~10.9.1",
     "tslint": "6.1.3",
-    "typescript": "~4.8.4"
+    "typescript": "~4.9.5"
   }
 }
