--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@solana/spl-token": "^0.3.7",
     "@solana/wallet-adapter-wallets": "^0.19.11",
     "@solana/web3.js": "^1.73.2",
+    "@spling/social-protocol": "^1.5.6",
     "@walletconnect/types": "^2.4.0",
     "angular-dark-mode": "^3.0.3",
     "angular-sol-wallets": "^0.0.22",
